2007-10-16  Michael Natterer  <mitch@gimp.org>

	* libgimpwidgets/gimppropwidgets.c (gimp_prop_size_entry_new):
	honor the "show-pixels" and "show-percent" properties of the unit
	param spec.

	* app/tools/gimprectangletool.c (gimp_rectangle_tool_start): set
	the image's width/height on the size entries so the percent unit
	works correctly.

2007-10-16  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpselectionoptions.c (gimp_selection_options_gui):
	changed "Show interactive boundary" to "Interactive boundary".

	* app/tools/gimptextoptions.c: align the color panel with the
	button box below it.

2007-10-16  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpaligntool.c: reduced width of the tool options.

2007-10-16  Sven Neumann  <sven@gimp.org>

	* app/paint/paint-enums.[ch] (GimpPerspectiveCloneMode): changed
	"Modify Perspective Plane" to "Modify Perspective".

	* app/tools/gimptextoptions.c (gimp_text_options_gui): changed
	"Create Path from Text" to "Path from Text".

	* app/tools/gimpvectoroptions.c (gimp_vector_options_gui):
	changed "Create Selection from Path" to "Selection from Path".

2007-10-16  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimprectangleoptions.c: redid the x, y, width and
	height entries according to a mockup from peter.

2007-10-16  Michael Natterer  <mitch@gimp.org>

	* libgimpwidgets/gimppropwidgets.c (gimp_prop_size_entry_new):
	always connect to refval-changed *and* value-changed of the
	GimpSizeEntry.

2007-10-16  Sven Neumann  <sven@gimp.org>

	* libgimp/gimppatternselectbutton.c
	* libgimp/gimpbrushselectbutton.c
	* libgimpwidgets/gimpcolorarea.c
	* app/widgets/gimpdnd.c
	* app/widgets/gimpdockbook.c: set GDK_WINDOW_TYPE_HINT_DND on
	popup windows used to implement a DND cursor.

2007-10-16  Sven Neumann  <sven@gimp.org>

	* tools/pdbgen/pdb/gradient.pdb: increased the arbitrary upper
	limit on the number of segments in
	gimp-gradient-segment-range-split-uniform. The old value used to