@@ -1,3 +1,8 @@
+2007-10-17  Sven Neumann  <sven@gimp.org>
+
+	* libgimpwidgets/gimpnumberpairentry.c: fixed formatting and
+	gtk-doc comment.
+
 2007-10-16  Michael Natterer  <mitch@gimp.org>
 
 	* libgimpwidgets/gimppropwidgets.c (gimp_prop_size_entry_new):
